--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,8 @@
 server {
     listen 80;
     server_name default.domain.com;
-    location / {
-    }
-    # return 301 https://default.domain.com;
-    # DEL_START
+    #return 301 https://default.domain.com;
+    #DEL_START
     location /.well-known/acme-challenge/ {
         alias /var/www/dehydrated/;
     }
@@ -13,7 +11,7 @@ server {
 
 #server {
 #    listen 0.0.0.0:443 ssl http2;
-#    sever_name default.domain.com;
+#    server_name default.domain.com;
 #    location /.well-known/acme-challenge/ {
 #        alias /var/www/dehydrated/;
 #    }
